# LLM-Powered-Automation-System

./: README..md  README.md  pyproject.toml
github_agent_sequential/: .env.exapmle  Dockerfile  github_agent.py  requirements.txt  utils.py
github_agent_sequential/agent/: __init__.py  agent.py
github_agent_sequential/servers/github/: Dockerfile  README.md  index.ts  package-lock.json  package.json  tsconfig.json
github_agent_sequential/servers/mcp-sequential-thinking-master/: .coverage
