[project]
name = "github-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.0",
    "black==23.12.1",
    "colorlog==6.8.0",
    "flake8==6.1.0",
    "flask==3.0.0",
    "google-adk>=1.18.0",
    "google-genai>=1.49.0",
    "litellm>=1.57.13",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.0.0",
]
